Fixed Safari Layout Bug

--- a/css/app.css
+++ b/css/app.css
@@ -104,6 +104,7 @@ section#theHaiku {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
 }
 button {
   border: none;
